[gd_scene load_steps=26 format=3 uid="uid://dt7nws0xk3oh4"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_84fw0"]
[ext_resource type="Texture2D" uid="uid://bfs4t8atucj1k" path="res://images/bg.png" id="2_7710q"]
[ext_resource type="Script" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_8wkle"]
[ext_resource type="Script" path="res://scripts/buttonHandler.gd" id="3_e1skk"]
[ext_resource type="Texture2D" uid="uid://c4smu4hwpf7nr" path="res://images/settings.png" id="3_xwkw5"]
[ext_resource type="FontFile" uid="uid://biaiwy3gy3g38" path="res://fonts/Phantomuff Difficult Font.ttf" id="4_4iyyn"]
[ext_resource type="Script" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_gnbkc"]
[ext_resource type="Theme" uid="uid://tr1wtgfxo17j" path="res://fonts/detailtheme.tres" id="5_5n2ta"]
[ext_resource type="Texture2D" uid="uid://ddnb5shn8hc3u" path="res://images/refresh.png" id="5_nhro4"]
[ext_resource type="Script" path="res://scripts/mod_details.gd" id="6_8fwrf"]
[ext_resource type="AudioStream" uid="uid://cm43wmnmi1tq" path="res://Pause Menu (Pico).ogg" id="6_db0sl"]
[ext_resource type="Texture2D" uid="uid://cah7ru0mp17bt" path="res://images/icon_default.png" id="7_sxxka"]
[ext_resource type="Theme" uid="uid://cwgjbb6yq0kut" path="res://fonts/popup.tres" id="12_eyf4t"]

[sub_resource type="Resource" id="Resource_hhayx"]
script = ExtResource("4_gnbkc")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_ml236"]
script = ExtResource("4_gnbkc")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_esndm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ihs6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btkyi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1s8rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6n61s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_olriv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g8hdh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oircl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_smpnt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u22ih"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84fw0")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.865149, 0.808157, 1, 1)
layout_mode = 0
offset_left = -40.0
offset_top = -127.0
offset_right = 2167.0
offset_bottom = 1519.0
scale = Vector2(0.609842, 0.609842)
texture = ExtResource("2_7710q")

[node name="TopBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -25.0
offset_top = -31.0
offset_right = 8.0
offset_bottom = 71.0
grow_horizontal = 2
rotation = -0.0141893
color = Color(0, 0, 0, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 61.0
offset_right = 673.0
offset_bottom = -23.0
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("3_8wkle")
wheel_scroll_damper = SubResource("Resource_hhayx")
dragging_scroll_damper = SubResource("Resource_ml236")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ModDetails" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 1035.0
offset_top = 61.0
offset_right = 1223.0
offset_bottom = 238.0
script = ExtResource("6_8fwrf")

[node name="Image" type="Control" parent="ModDetails"]
anchors_preset = 0
offset_left = -254.0
offset_right = -214.0
offset_bottom = 40.0

[node name="ImagePanel" type="PanelContainer" parent="ModDetails/Image"]
layout_mode = 0
offset_right = 178.0
offset_bottom = 177.0
theme = ExtResource("5_5n2ta")

[node name="TextureRect" type="TextureRect" parent="ModDetails/Image"]
layout_mode = 2
offset_left = 16.0
offset_top = 16.0
offset_right = 165.0
offset_bottom = 162.0
texture = ExtResource("7_sxxka")
expand_mode = 1

[node name="MainDetails" type="Control" parent="ModDetails"]
anchors_preset = 0
offset_left = -70.0
offset_right = -30.0
offset_bottom = 40.0

[node name="MainPanel" type="PanelContainer" parent="ModDetails/MainDetails"]
layout_mode = 0
offset_right = 275.0
offset_bottom = 177.0
theme = ExtResource("5_5n2ta")

[node name="Name" type="Button" parent="ModDetails/MainDetails"]
layout_mode = 0
offset_left = 7.0
offset_top = 9.0
offset_right = 264.0
offset_bottom = 50.0
focus_mode = 0
theme = ExtResource("5_5n2ta")
text = "Mod Name"
alignment = 2

[node name="Description" type="Label" parent="ModDetails/MainDetails"]
layout_mode = 0
offset_left = 6.0
offset_top = 47.0
offset_right = 265.0
offset_bottom = 158.0
theme = ExtResource("5_5n2ta")
text = "Mod Description"
horizontal_alignment = 2
autowrap_mode = 2

[node name="Version" type="Label" parent="ModDetails/MainDetails"]
layout_mode = 0
offset_left = 7.0
offset_top = 158.0
offset_right = 266.0
offset_bottom = 172.0
theme = ExtResource("5_5n2ta")
theme_override_font_sizes/font_size = 11
text = "1.0.0"
horizontal_alignment = 2

[node name="Contributors" type="Control" parent="ModDetails"]
layout_mode = 1
anchor_left = 1.09
anchor_top = 1.056
anchor_right = 1.09
anchor_bottom = 1.056
offset_left = 0.0799866
offset_top = 0.0879974
offset_right = 40.08
offset_bottom = 40.088

[node name="ContributorPanel" type="PanelContainer" parent="ModDetails/Contributors"]
layout_mode = 1
anchors_preset = -1
offset_left = -331.0
offset_right = 1.0
offset_bottom = 261.0
theme = ExtResource("5_5n2ta")

[node name="Header" type="Label" parent="ModDetails/Contributors"]
layout_mode = 0
offset_left = -264.0
offset_top = 10.0
offset_right = -5.0
offset_bottom = 41.0
theme = ExtResource("5_5n2ta")
theme_override_font_sizes/font_size = 26
text = "Contributors:"
horizontal_alignment = 2
autowrap_mode = 2

[node name="Cont_Container" type="VBoxContainer" parent="ModDetails/Contributors"]
layout_mode = 0
offset_left = -322.0
offset_top = 45.0
offset_right = -5.0
offset_bottom = 252.0

[node name="BottomBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -26.0
offset_right = 11.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 0
rotation = -0.0141893
color = Color(0, 0, 0, 1)

[node name="Buttons" type="Control" parent="."]
anchors_preset = 0
offset_left = 772.0
offset_top = 631.0
offset_right = 1182.0
offset_bottom = 691.0
script = ExtResource("3_e1skk")

[node name="ConfigButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 77.0
offset_top = 4.0
offset_right = 154.0
offset_bottom = 81.0
scale = Vector2(0.570075, 0.570075)
theme_override_colors/icon_normal_color = Color(0.93845, 0.93845, 0.93845, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_esndm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7ihs6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btkyi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1s8rw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6n61s")
icon = ExtResource("3_xwkw5")
flat = true
expand_icon = true

[node name="RefreshButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 13.0
offset_top = 4.0
offset_right = 90.0
offset_bottom = 81.0
scale = Vector2(0.570075, 0.570075)
theme_override_colors/icon_normal_color = Color(0.93845, 0.93845, 0.93845, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_esndm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7ihs6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btkyi")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1s8rw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6n61s")
icon = ExtResource("5_nhro4")
flat = true
expand_icon = true

[node name="Launch" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 141.0
offset_top = -12.0
offset_right = 482.0
offset_bottom = 61.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_4iyyn")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxEmpty_olriv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_g8hdh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oircl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_smpnt")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u22ih")
text = "Launch FNF"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(458, 538)
theme = ExtResource("12_eyf4t")
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_db0sl")
volume_db = 10.0
autoplay = true

[connection signal="button_down" from="ModDetails/MainDetails/Name" to="ModDetails" method="_on_button_button_down"]
[connection signal="button_down" from="Buttons/ConfigButton" to="." method="configButton"]
[connection signal="mouse_entered" from="Buttons/ConfigButton" to="Buttons" method="_on_config_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/ConfigButton" to="Buttons" method="_on_config_button_mouse_exited"]
[connection signal="button_down" from="Buttons/RefreshButton" to="." method="refreshButton"]
[connection signal="mouse_entered" from="Buttons/RefreshButton" to="Buttons" method="_on_refresh_button_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/RefreshButton" to="Buttons" method="_on_refresh_button_mouse_exited"]
[connection signal="button_down" from="Buttons/Launch" to="." method="onLaunchPressed"]
[connection signal="mouse_entered" from="Buttons/Launch" to="Buttons" method="_on_launch_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Launch" to="Buttons" method="_on_launch_mouse_exited"]
[connection signal="canceled" from="FileDialog" to="." method="_on_file_dialog_canceled"]
[connection signal="dir_selected" from="FileDialog" to="." method="onModFolderSelected"]
